# matsim-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/wiki/: CI-CD.md  Contributing.md  Home.md  push-wiki.sh
.github/workflows/: branch-protection.yml  ci.yml
docs/: llm-backends-comparison.md  model-download.md
examples/: discovery_chat.py  single_relaxation.py
scripts/: build-vllm-from-source-frontier.sh  frontier-module-stack.sh  job-rhea-frontier.sh  prebuild-tvm-ffi-frontier.sh  setup_env.sh  smoke-transformers-frontier.sh  smoke-vllm-frontier.sh
scripts/frontier/: README-frontier.md  README-six-model-benchmark.md  _rocr_to_hip.sh  all_model_specs.json  build-qe-cpu-frontier.sh  build-vllm-from-source-frontier.sh  build-vllm-rocm72.sh  download-deepseek-v4-pro.sh  download-open-models-frontier.sh  download-qwen36-models.sh  frontier-module-stack.sh  install-rocm72-phase23.sh  install-rocm72.sh  install_matsim_frontier.sh  job-rhea-frontier.sh  job-rhea-transformers-frontier.sh  job-sequential-benchmark-frontier.sh  job-serve-multinode-frontier.sh  job-six-model-benchmark-frontier.sh  launch-test-all-models-frontier.sh  launch-test-singlenode-resume-frontier.sh  prebuild-tvm-ffi-frontier.sh  six_model_specs.vllm-only.json  smoke-transformers-frontier.sh  smoke-vllm-frontier.sh  smoke-vllm-multinode-frontier.sh  smoke-vllm-singlenode-frontier.sh  vllm-rocm72-protected-requirements.txt
src/matsim_agents/: __init__.py  chat.py  cli.py  graph.py  llm.py  state.py
src/matsim_agents/agents/: __init__.py  analyst.py  executor.py  planner.py
src/matsim_agents/discovery/: __init__.py  composition.py  phase_explorer.py  stability.py  wrapper.py
src/matsim_agents/tools/: __init__.py  relaxation.py
tests/: conftest.py  test_discovery.py  test_phase_explorer.py  test_state_and_graph.py
tests/integration/: test_agent_graph.py  test_chat_flow.py
tests/smoke/: test_llm_providers.py
