[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "matsim-agents"
version = "0.1.0"
description = "Multi-agent AI framework for atomistic materials simulation and discovery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "ORNL Multi-Agentic AI for Materials" }]
keywords = ["agents", "langgraph", "materials", "atomistic", "hydragnn", "ase", "mlff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "pydantic>=2.7",
    "ase>=3.23",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
hydragnn = [
    # HydraGNN and torch_geometric must be installed manually following
    # https://github.com/ORNL/HydraGNN. Listed here for reference.
    "torch>=2.2",
]
openai = ["langchain-openai>=0.2.0"]
ollama = ["langchain-ollama>=0.2.0"]
vllm = ["langchain-openai>=0.2.0"]  # vLLM uses the OpenAI-compatible client
anthropic = ["langchain-anthropic>=0.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
matsim-agents = "matsim_agents.cli:app"

[project.urls]
Repository = "https://code.ornl.gov/multi-agentic-ai-materials/matsim-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/matsim_agents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
