[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "matsim-agents"
version = "0.1.0"
description = "Multi-agent AI framework for atomistic materials simulation and discovery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "ORNL Multi-Agentic AI for Materials" }]
keywords = ["agents", "langgraph", "materials", "atomistic", "hydragnn", "ase", "mlff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "pydantic>=2.7",
    "ase>=3.23",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
hydragnn = [
    # HydraGNN and torch_geometric must be installed manually following
    # https://github.com/ORNL/HydraGNN. Listed here for reference.
    "torch>=2.2",
]
openai = ["langchain-openai>=0.2.0"]
ollama = ["langchain-ollama>=0.2.0"]
vllm = ["langchain-openai>=0.2.0"]  # vLLM uses the OpenAI-compatible client
anthropic = ["langchain-anthropic>=0.2.0"]
huggingface = ["langchain-huggingface>=0.1.0", "transformers>=4.40", "accelerate>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
matsim-agents = "matsim_agents.cli:app"

[project.urls]
Repository = "https://code.ornl.gov/multi-agentic-ai-materials/matsim-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/matsim_agents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
# Match black==21.5b1 (HydraGNN pinned version):
# - double quotes (black default)
# - magic trailing comma respected (black default)
# - no preview features (introduced after black 22.x)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
preview = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Pre-existing issues in src/ that are out of scope for automated fixes.
# B008: typer.Option/Argument in function defaults is idiomatic typer usage.
# E501: long help strings and Field descriptions intentionally exceed 100 chars.
# E702: semicolons in coord/species append pairs (phase_explorer style).
# F401: numpy imported inside a lazy function but only used conditionally.
# I001: ruff cannot sort import blocks that live inside function bodies.
# SIM905: str.split() element table is intentionally formatted as a string.
# UP035: typing.Callable/Iterable used in files that pre-date this rule.
"src/matsim_agents/agents/planner.py" = ["E501"]
"src/matsim_agents/chat.py" = ["E501", "UP035"]
"src/matsim_agents/cli.py" = ["B008", "E501"]
"src/matsim_agents/discovery/composition.py" = ["I001", "SIM905", "UP035"]
"src/matsim_agents/discovery/phase_explorer.py" = ["E501", "E702", "F401"]
"src/matsim_agents/discovery/stability.py" = ["UP035"]
"src/matsim_agents/discovery/wrapper.py" = ["I001", "UP035"]
"src/matsim_agents/tools/relaxation.py" = ["E501", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
